- Fixed mode picker spacing and opacity. - POI markers now orange with circle icon.   - Previous (blue + target) conflicted with Indego (purple + gear). - Fix post preview card width. - Onhover, inverse Map View button colors. - Misc style and copy tweaks.

--- a/src/app/styles/components/_directions-form.scss
+++ b/src/app/styles/components/_directions-form.scss
@@ -68,7 +68,7 @@
 
         @include respond-to('xxs') {
             justify-content: flex-end;
-            margin-right: 10px;
+            margin-right: 5px;
         }
 
         .body-map & {
@@ -133,8 +133,12 @@
             margin-right: 60px;
         }
 
+        @include respond-to('xxs') {
+            margin-right: 30px;
+        }
+
         .body-map & {
-            margin-right: 50px;
+            margin-right: 40px;
 
             @include respond-to('xxs') {
                 margin-right: 70px;
@@ -146,7 +150,7 @@
         }
 
         .walk {
-            margin-right: 30px;
+            margin-right: 20px;
         }
 
         .bike {
@@ -158,13 +162,14 @@
         border-top: 2px solid transparent;
         border-bottom: 2px solid transparent;
         cursor: pointer;
+        opacity: .5;
 
         .body-map & {
             padding-right: 0;
         }
 
-        &.transit.off {
-            opacity: .5;
+        &.on {
+            opacity: 1;
         }
     }
 
@@ -175,7 +180,7 @@
         width: 50px;
         height: 100%;
         margin-top: -5px;
-        margin-left: 30px;
+        margin-left: 24px;
         padding-top: 3px;
         background-color: $gophillygo-blue-dark;
         cursor: pointer;
