--- a/src/prototype/app/sass/components/_directions-form.scss
+++ b/src/prototype/app/sass/components/_directions-form.scss
@@ -66,7 +66,7 @@
         line-height: 3rem;
         text-transform: uppercase;
 
-        @include respond-to('xxs') {
+        @include respond-to('xs') {
             justify-content: flex-end;
             margin-right: 10px;
         }
@@ -310,7 +310,7 @@
                 position: relative;
                 background-color: $gophillygo-blue-dark;
                 cursor: pointer;
-                
+
                 // Caret if we go with menu instead of toggle
                 // &:after {
                 //     position: absolute;
